--- a/index.html
+++ b/index.html
@@ -1935,10 +1935,13 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </figure>
     </div>
 
-  <div class="KA"style="display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
-    <p style="font-family:'helvetica'; font-size: 17.5px; color: #0a76f2f3; text-align: justify; padding: 10px; line-height: 22.9px;">
-      Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un établissement adapté d'étude nommé Accadémie Tiki N'Yiki pour soutenir les élèves et étudiant-es en situation de handicap.
-      Cette académie accueillera des étudiant-es de différents grades et sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer son bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
+  <div class="KA" style="color: #0a76f2f3; display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
+    
+    <p style="font-family:'helvetica'; font-size: 17.5px; text-align: justify; padding: 10px; line-height: 22.9px;">
+      Vu ces différentes difficultés faites de barrières sociales, 
+      d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un établissement adapté d'étude nommé Accadémie Tiki N'Yiki pour soutenir les élèves et étudiant-es en situation de handicap.
+      Cette académie accueillera des étudiant-es de différents grades et sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer son bon fonctionnement. 
+      Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
        pour la mobilité en cas de nécessité.
     </p>
    <br>
@@ -2398,6 +2401,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
