--- a/index.html
+++ b/index.html
@@ -2149,7 +2149,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-           Je suis Docteur et Je Donne Mon Temps.
+           Je suis Docteur et Je Donne Mon Coeur.
             </figcaption>
     </figure>
     </div>
@@ -2230,7 +2230,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <figure> 
           <a name="CHANGE"></a> <figcaption style=" color:#0177fefa; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 14px; text-align: left;">
             
-            Certain-es Mangent à leur faim tandis que les Autres Meurent de faim
+            Certain-es mangent à leur faim tandis que d'autres meurent de faim
             </figcaption> 
     </figure> 
     
@@ -2401,6 +2401,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
