--- a/index.html
+++ b/index.html
@@ -925,8 +925,9 @@ animation: auto 12s infinite ease-in;
 
 .kgp img{
     width: 100%;
-    height: 85%;
-    border-radius: 50%;
+    height: 84%;
+   padding: 3px;
+   border: 0.12rem solid #808080ec;
 }
 
 .Cartes{
@@ -2401,6 +2402,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
