--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(72, 136, 253, 0.97);
+                 background: rgba(124, 168, 226, 0.981);
                  width: 100%;
                  height: 115px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 1.7rem 1px rgba(192, 192, 192, 0.572);
+                 box-shadow: 0 0 1.7rem 1px rgba(147, 147, 147, 0.572);
                  border-bottom: 5.2rem solid #ffffff;  
                  opacity: 0.99;
           }
@@ -865,9 +865,9 @@ animation: auto 12s infinite ease-in;
   width: 73%;
   height: auto;
   border-top: 2rem solid rgba(72, 136, 253, 0.97);
-  border-right: 0.12rem solid rgba(52, 120, 255, 0.63);
-  border-left: 0.12rem solid rgba(52, 120, 255, 0.63);
-  border-bottom: 0.12rem solid rgba(52, 120, 255, 0.63);
+  border-right: 0.12rem solid rgba(61, 126, 255, 0.63);
+  border-left: 0.12rem solid rgba(61, 126, 255, 0.63);
+  border-bottom: 0.12rem solid rgba(61, 126, 255, 0.63);
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   margin-top: 3.5rem;
@@ -911,7 +911,6 @@ animation: auto 12s infinite ease-in;
     height: 58%;
     border-left: 0.25rem solid transparent;
     border-top: 0.25rem solid transparent;
-    padding: 5px;
 }
 
 .kgp:hover{
@@ -926,8 +925,8 @@ animation: auto 12s infinite ease-in;
 .kgp img{
     width: 100%;
     height: 84%;
-   padding: 3px;
-   border: 0.12rem solid #808080ec;
+    padding: 3px;
+    border: 0.12rem solid rgba(61, 126, 255, 0.902);
 }
 
 .Cartes{
@@ -2402,6 +2401,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
