--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,6 @@ height: 728px;
   flex-direction: column;
   justify-content: center; 
   align-items: center; 
-  background: rgba(38, 38, 38, 0.755); 
   border: 0.12rem solid #b3b3b3; 
   border-radius: 50%; 
   font-family: 'helvetica'; 
@@ -1094,14 +1093,17 @@ height: 728px;
   line-height: 30px;
   cursor: pointer;
   padding: 20px;
+  color: yellow;
+  box-shadow: 10px 8px 1.15rem 0.1px orangered;
+  border: 0.12rem solid rgb(201, 54, 0); 
+  background: #212121f0;
 }
 
 .FTR:hover{
-  border: 0.12rem solid rgb(201, 54, 0); 
-  background: #212121f0;
-  transition: 0.28s linear;
-  color: yellow;
-  box-shadow: 10px 8px 1.15rem 0.1px orangered;
+  transition: 0.25s linear;
+  border: 0.12rem solid #eeeeee; 
+  color: rgba(255, 18, 145, 0.94);
+  box-shadow: none;
 }
 a:visited{
   color: rgba(255, 18, 145, 0.94);
@@ -2401,6 +2403,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
