--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(124, 168, 226, 0.981);
+                 background: rgba(161, 220, 251, 0.948);
                  width: 100%;
                  height: 115px;
                  object-fit: cover;
@@ -243,7 +243,6 @@
             color: rgba(17, 54, 156, 0.795);
             font-family:'arial black'; 
             font-size: 1.75rem;
-            color: #2d34b5; 
             text-align: left;
             margin-top: 1rem;
           }
@@ -270,7 +269,7 @@
           font-size: 1rem; 
           margin-top: -0.19rem;
           font-family: 'arial black'; 
-          border-top: 0.1rem solid rgb(89, 86, 255);
+          border-top: 0.1rem solid rgba(161, 220, 251, 0.948);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
          }
@@ -621,10 +620,10 @@ opacity: 1;
 .YTP{
   padding: 0.35rem;
   text-align: left;
-  font-size: 17px;
+  font-size: 21px;
   line-height: 22px;
-  color: rgba(115, 115, 115, 0.802);
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: rgba(94, 94, 94, 0.765);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .YTP:hover{
   color:green;
@@ -1576,9 +1575,9 @@ function myFunction() {
           <div class="YTP">
         <b> Mon conseil aux autres personnes handicapées serait de se concentrer 
           sur les choses que leur handicap ne les empêche pas de bien faire et ne pas regretter les choses avec lesquelles il interfère. 
-          Ne soyez handicapé ni mentalement, ni physiquement 
+          Ne soyez pas handicapé ni mentalement, ni physiquement 
         <br>
-        <em style="color: #02a6ff; font-family: Arial, Helvetica, sans-serif; font-size: 11.5px;">[Stephen Hawking, métaphysicien, cosmologue et auteur Anglais]</em>
+        <em style="color: #008eda; font-family: Arial, Helvetica, sans-serif; font-size: 11.5px;">[Stephen Hawking, métaphysicien, cosmologue et auteur Anglais]</em>
       
         </b>
         </div>
@@ -1624,8 +1623,8 @@ function myFunction() {
       <a href="https://blogs.worldbank.org/fr/education/leducation-comme-un-droit-pour-les-enfants-en-afrique-de-louest-et-centrale" target="_blank">
       <div class="KRT">
                     <div>
-                        <div style="text-align: center; padding: 3px; background: rgba(61, 173, 233, 0.935); color: #fff; font-family: 'verdana'; font-size: 15px;">
-                          Un des derniers cours que le promoteur a dispensé à Tiki N'Yiki
+                        <div style="text-align: center; padding: 3px; background: rgba(161, 220, 251, 0.948); color: #000; font-family: 'verdana'; font-size: 15px;">
+                          Un cours dispensé par le promoteur
                         </div>
 
                         <div class="k1-image">
@@ -1640,7 +1639,7 @@ function myFunction() {
       <div class="EDE">
     
             <div>
-              <div style="text-align: center; padding: 3px; background: rgba(61, 173, 233, 0.935); color: #fff; font-family: 'verdana'; font-size: 15px;">
+              <div style="text-align: center; padding: 3px; background: rgba(161, 220, 251, 0.948); color: #000; font-family: 'verdana'; font-size: 15px;">
                 L'éducation est la colonne vertébrale de tout développement durable
               </div>
 
@@ -1656,7 +1655,7 @@ function myFunction() {
   <div class="DER">
 
     <div>
-      <div style="text-align: center; padding: 3px; background: rgba(61, 173, 233, 0.935); color: #fff; font-family: 'verdana'; font-size: 15px;">
+      <div style="text-align: center; padding: 3px; background: rgba(161, 220, 251, 0.948); color: #000; font-family: 'verdana'; font-size: 15px;">
         Cours de soutien pour des écoliers du quartier
       </div>
 
@@ -2403,6 +2402,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
