--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     .Translator:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: yellow;
+      color: purple;
     }
 
     .Calculator{
@@ -136,7 +136,7 @@
     .Calculator:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: yellow;
+      color: purple;
     }
     
     .dico{
@@ -156,7 +156,7 @@
     .dico:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: yellow;
+      color: purple;
     }
 
     .datime{
@@ -176,7 +176,7 @@
     .datime:hover{
       transition: 0.25s linear;
       width: 100%;
-      color: yellow;
+      color: purple;
     }
 
     
@@ -185,7 +185,7 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(161, 220, 251, 0.948);
+                 background: rgba(157, 217, 250, 0.944);
                  width: 100%;
                  height: 115px;
                  object-fit: cover;
@@ -2402,6 +2402,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
