--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #d0d2eef8;
+                 background: #d7daf8f7;
                  width: 100%;
                  height: 115px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 1.7rem 1px rgba(147, 147, 147, 0.572);
+                 box-shadow: 0 0 1.5rem 1px rgba(147, 147, 147, 0.447);
                  border-bottom: 5.2rem solid #ffffff;  
                  opacity: 0.99;
           }
@@ -269,7 +269,7 @@
           font-size: 1rem; 
           margin-top: -0.19rem;
           font-family: 'arial black'; 
-          border-top: 0.1rem solid #d0d2eecd;
+          border-top: 0.1rem solid #d7daf8de;
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
          }
@@ -1344,8 +1344,8 @@ transition: 0.26s linear;
 
 .CC{
   display: grid;
-  grid-template-rows: 0.5fr 0.5fr;
-  column-gap: 1rem;
+  grid-template-rows: 0.45fr 0.1fr;
+  column-gap: 0.1rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
@@ -1391,7 +1391,15 @@ transition: 0.26s linear;
   justify-items: center;
   width: 108%;
   height: 600px;
-  background: #017af328;
+  background: #90c7fe28;
+  border-top: 1.01rem solid rgba(2, 157, 241, 0.096);
+}
+
+.P1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 </style>
@@ -2356,20 +2364,20 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="Painting">
 
 
-<div class="P1" style="background: #fff; width: 500px;">
-Div1 [ jhefj  efnjefnj fjkdf mfnkj fjknj edfuh bvdaHN JISD  ]
+<div class="P1" style="background: #fff; width: 500px; border-radius: 2rem; margin-left: 0.25rem; margin-top: 0.5rem;">
+<h1> Div1 [ Peinture 1 ]</h1>
 </div>
 
-<div class="P1" style="background: #ff0; width: 500px;">
-  Div2 Sudnrue sksdnd djhsholc jsjhcg cdj ujwwjwd jcuidfh cujdujc 
+<div class="P1" style="background: #ff0; width: 500px; border-radius: 2rem; margin-top: 0.5rem; margin-right: 0.25rem;">
+  <h1>Div2 [ Peinture 2 ]</h1>
 </div>
 
-<div class="P1" style="background: #0ff; width: 500px;">
-  Div3 We are btyhe possdi djkjkked trk doedm nsndfnm and dio it perfetctgd bd
+<div class="P1" style="background: #0ff; width: 500px; border-radius: 2rem; margin-left: 0.25rem;">
+<h1>Div3 [ Peinture 3 ]</h1>
 </div>
 
-<div class="P1" style="background: #ff0a06; width: 500px;">
-  Div4 shhs hsgx dshvbvhs bwdfbs  cjbh bs sbn bh cbnxjnbc df fm n cf nnk nc  sdjk
+<div class="P1" style="background: #ff0a06; width: 500px; border-radius: 2rem; margin-right: 0.25rem;">
+<h1> Div4 [ Peinture 1 ]</h1>
 </div>
 
 </div>
@@ -2445,7 +2453,7 @@ Div1 [ jhefj  efnjefnj fjkdf mfnkj fjknj edfuh bvdaHN JISD  ]
         <span style="justify-self: center;"> <b>Remonter la Page</b></span>
     </div>
 </a>
-</div>
+
 </div>       
 
 
@@ -2470,6 +2478,7 @@ Div1 [ jhefj  efnjefnj fjkdf mfnkj fjknj edfuh bvdaHN JISD  ]
 </body>
 
 </html>
+
 
 
 
