--- a/index.html
+++ b/index.html
@@ -1381,13 +1381,13 @@ transition: 0.26s linear;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 92%;
   height: 100px;
   font-family: 'arial black';
-  font-size: 1.65rem;
-  color: #7d7d7dd6;
+  font-size: 2rem;
+  color: #949494bd;
   padding: 10px;
-  border-top: 1.5rem solid rgba(74, 191, 254, 0.241);
+  border-top: 2rem solid rgba(214, 214, 214, 0.249);
 
 }
 
@@ -2349,7 +2349,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div class="CC1" style="border-bottom: 0.2rem solid #8d8d8de0;"> 
         
         <img src="https://www.zupimages.net/up/23/24/o4k8.jpg" alt="Sensibiliser par rapport aux changements climatiques">
-        <figcaption style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-top: 3px; font-size: 15px; color: #000; line-height: 20px; padding: 5px;">
+        <figcaption style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-top: -1px; font-size: 15px; color: #404040d5; line-height: 20px; padding: 5px;">
           Les enfants sont les responsbales du futur. Les sensibiliser sur les changements climatiques fait partie des nobles 
           objectifs que Tiki N'Yiki s'est fixés et travaille à atteindre les objectifs. 
       </figcaption> 
@@ -2360,7 +2360,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         
            <img src="https://www.zupimages.net/up/22/29/epkw.jpg" alt="Nettoyage de sacs plastiques">
            <figure> 
-        <figcaption style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-top: 3px; font-size: 15px; color: #000">
+        <figcaption style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; margin-top: 3px; font-size: 15px; color: #404040d5">
             Jour de nettoyage de sacs plastiques <a name="Peinture"> </a>
         </figcaption> 
     </figure> 
@@ -2381,19 +2381,19 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="Painting">
 
 
-<div class="P1" style="background: rgba(0, 128, 0, 0.746); width: 500px; border-radius: 2rem; margin-left: 0.5rem; margin-top: 1rem;">
+<div class="P1" style="padding: 10px; border: 0.12rem solid #bebebecb; width: 500px; margin-left: 0.5rem; border-radius: 0.2rem; margin-top: 1rem;">
 <h1> Div1 [ Peinture 1 ]</h1>
 </div>
 
-<div class="P1" style="background: rgba(255, 255, 0, 0.952); width: 500px; border-radius: 2rem; margin-top: 1rem; margin-right: 0.5rem;">
+<div class="P1" style="padding: 10px; border: 0.12rem solid #bebebecb;  width: 500px; border-radius: 0.2rem; margin-top: 1rem; margin-right: 0.5rem;">
   <h1>Div2 [ Peinture 2 ]</h1>
 </div>
 
-<div class="P1" style="background: rgba(0, 255, 255, 0.946); width: 500px; border-radius: 2rem; margin-left: 0.5rem; margin-bottom: 1rem;">
+<div class="P1" style="padding: 10px; border: 0.12rem solid #bebebecb;  width: 500px; border-radius: 0.2rem; margin-left: 0.5rem; margin-bottom: 1rem;">
 <h1>Div3 [ Peinture 3 ]</h1>
 </div>
 
-<div class="P1" style="background: #ff0a06ed; width: 500px; border-radius: 2rem; margin-right: 0.5rem; margin-bottom: 1rem;">
+<div class="P1" style="padding: 10px; border: 0.12rem solid #bebebecb; width: 500px; border-radius: 0.2rem; margin-right: 0.5rem; margin-bottom: 1rem;">
 <h1> Div4 [ Peinture 4 ]</h1>
 </div>
 
@@ -2495,6 +2495,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
