--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 0 1.5rem 1px rgba(123, 123, 123, 0.312);
-                 border-bottom: 5.2rem solid #ffffff;  
+                 border-bottom: 5.2rem solid #fffffff6;  
                  opacity: 0.99;
           }
           
@@ -889,13 +889,13 @@ animation: auto 12s infinite ease-in;
 .kpt{
   width: 100%;
   height: auto;
-  font-family: 'helvetica';
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 23px;
   color: rgba(38, 38, 38, 0.948);
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
-  font-size: 16px; 
+  font-size: 18px; 
   background: #fff;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
@@ -2495,6 +2495,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
