--- a/index.html
+++ b/index.html
@@ -838,10 +838,10 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 74%;
     height: auto;
-    line-height: 27px;
+    line-height: 30px;
     font-size: 17.5px; 
-    color: rgba(8, 8, 8, 0.897);
-    font-family: helvetica; 
+    color: rgba(1, 0, 9, 0.719);
+    font-family:'helvetica';
     word-spacing: 0.25px;
     padding: 10px;
 }
@@ -881,7 +881,7 @@ animation: auto 12s infinite ease-in;
   justify-content: space-between;
   width: 73%;
   height: auto;
-  border-top: 2rem solid rgba(72, 136, 253, 0.97);
+  border-top: 2rem solid rgba(214, 214, 214, 0.249);;
   margin-top: 3.5rem;
   padding: 16px;
 }
@@ -891,11 +891,11 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 23px;
-  color: rgba(38, 38, 38, 0.948);
+  color: rgba(1, 0, 9, 0.826);
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
-  font-size: 18px; 
+  font-size: 18.2px; 
   background: #fff;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
@@ -961,9 +961,9 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 101%;
     height: auto;
-    line-height: 27px;
+    line-height: 30px;
     font-size: 17.5px; 
-    color: rgba(8, 8, 8, 0.897);
+    color: rgba(1, 0, 9, 0.719);
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
 }
@@ -1226,7 +1226,7 @@ height: 215px;
   height: auto;
   line-height: 27px;
     font-size: 17.5px; 
-    color: rgba(8, 8, 8, 0.897);
+    color: rgba(1, 0, 9, 0.719);
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
     text-align: justify;
@@ -1243,7 +1243,7 @@ height: 215px;
     height: auto;
     line-height: 27px;
     font-size: 17.5px; 
-    color: rgba(8, 8, 8, 0.897);
+    color: rgba(1, 0, 9, 0.719);
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
     border-top: 0.12rem solid #000;
@@ -1311,7 +1311,7 @@ transition: 0.26s linear;
   height: auto;
   line-height: 27px;
     font-size: 17.5px; 
-    color: rgba(8, 8, 8, 0.897);
+    color: rgba(1, 0, 9, 0.719);
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
   margin-top: 3.8rem;
