--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@ animation: auto 12s infinite ease-in;
     height: auto;
     line-height: 30px;
     font-size: 17.5px; 
-    color: rgba(1, 0, 9, 0.719);
+    color: #01010cbb;
     font-family:'helvetica';
     word-spacing: 0.25px;
     padding: 10px;
@@ -882,7 +882,7 @@ animation: auto 12s infinite ease-in;
   width: 73%;
   height: auto;
   border-top: 2rem solid rgba(214, 214, 214, 0.249);;
-  margin-top: 3.5rem;
+  margin-top: 4rem;
   padding: 16px;
 }
 
@@ -891,7 +891,7 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 23px;
-  color: rgba(1, 0, 9, 0.826);
+  color: #010111a9;
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
@@ -963,7 +963,7 @@ animation: auto 12s infinite ease-in;
     height: auto;
     line-height: 30px;
     font-size: 17.5px; 
-    color: rgba(1, 0, 9, 0.719);
+    color: #01010cbb;
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
 }
@@ -1226,7 +1226,7 @@ height: 215px;
   height: auto;
   line-height: 27px;
     font-size: 17.5px; 
-    color: rgba(1, 0, 9, 0.719);
+    color: #01010cbb;
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
     text-align: justify;
@@ -1243,7 +1243,7 @@ height: 215px;
     height: auto;
     line-height: 27px;
     font-size: 17.5px; 
-    color: rgba(1, 0, 9, 0.719);
+    color: #01010cbb;
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
     border-top: 0.12rem solid #000;
@@ -1260,7 +1260,7 @@ height: 215px;
   height: auto;
   line-height: 27px;
     font-size: 20.5px; 
-    color: rgba(8, 8, 8, 0.897);
+    color: #01010cbb;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
     word-spacing: 0.25px;
 }
@@ -1311,10 +1311,10 @@ transition: 0.26s linear;
   height: auto;
   line-height: 27px;
     font-size: 17.5px; 
-    color: rgba(1, 0, 9, 0.719);
+    color: #01010cbb;
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
-  margin-top: 3.8rem;
+  margin-top: 4rem;
     border-top: 0.1rem solid #000;
 }
 
@@ -2102,7 +2102,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     
 
   <p>
-    <br><em style="color:#1a1a1ae8">L'éducation est un droit fondamental, un puissant vecteur de développement et l'un des meilleurs moyens de réduire la pauvreté, d'élever les niveaux de santé, de promouvoir l'égalité entre les sexes et de faire progresser la paix et la stabilité. <a href="https://www.banquemondiale.org/fr/topic/education/overview" target="_blank" style="font-size: 15px;">[Sources: Banque Mondiale]</em></a> 
+    <br><em style="color:#01010c99">L'éducation est un droit fondamental, un puissant vecteur de développement et l'un des meilleurs moyens de réduire la pauvreté, d'élever les niveaux de santé, de promouvoir l'égalité entre les sexes et de faire progresser la paix et la stabilité. <a href="https://www.banquemondiale.org/fr/topic/education/overview" target="_blank" style="font-size: 15px;">[Sources: Banque Mondiale]</em></a> 
     <br>
     <br>
     C'est pour cela que les questions liées à l'éducation des personnes handicapées sont en priorité dans les projets de Tiki N'Yiki.  
@@ -2495,6 +2495,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
