--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #e8e8fffe;
+                 background: #e7e7fbfe;
                  width: 100%;
                  height: 118px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2rem 1px rgba(124, 124, 124, 0.269);
+                 box-shadow: 0 0 2rem 1px rgba(133, 133, 133, 0.269);
                  border-bottom: 5.2rem solid #fffffff6;  
                  opacity: 0.99;
           }
@@ -269,7 +269,7 @@
           font-size: 1rem; 
           margin-top: 0.11rem;
           font-family: 'arial black'; 
-          border-top: 0.1rem solid #e8e8ffdc;
+          border-top: 0.1rem solid #e3e3f4fe;
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
          }
@@ -891,7 +891,7 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 23px;
-  color: #020215d5;
+  color: #05052ad9;
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
@@ -2381,19 +2381,19 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="Painting">
 
 
-<div class="P1" style="padding: 10px; border: 0.12rem solid #bebebecb; width: 500px; margin-left: 0.5rem; border-radius: 0.2rem; margin-top: 1rem;">
+<div class="P1" style="padding: 10px; width: 500px; margin-left: 0.5rem; border: 0.13rem solid #d1d1d1ac; margin-top: 1rem;">
 <h1> Div1 [ Peinture 1 ]</h1>
 </div>
 
-<div class="P1" style="padding: 10px; border: 0.12rem solid #bebebecb;  width: 500px; border-radius: 0.2rem; margin-top: 1rem; margin-right: 0.5rem;">
+<div class="P1" style="padding: 10px; border: 0.13rem solid #d1d1d1ac; border-radius: 0.1rem;  width: 500px; margin-top: 1rem; margin-right: 0.5rem;">
   <h1>Div2 [ Peinture 2 ]</h1>
 </div>
 
-<div class="P1" style="padding: 10px; border: 0.12rem solid #bebebecb;  width: 500px; border-radius: 0.2rem; margin-left: 0.5rem; margin-bottom: 1rem;">
+<div class="P1" style="padding: 10px; border: 0.13rem solid #d1d1d1ac; border-radius: 0.1rem;  width: 500px; margin-left: 0.5rem; margin-bottom: 1rem;">
 <h1>Div3 [ Peinture 3 ]</h1>
 </div>
 
-<div class="P1" style="padding: 10px; border: 0.12rem solid #bebebecb; width: 500px; border-radius: 0.2rem; margin-right: 0.5rem; margin-bottom: 1rem;">
+<div class="P1" style="padding: 10px; border: 0.13rem solid #d1d1d1ac; border-radius: 0.1rem; width: 500px; margin-right: 0.5rem; margin-bottom: 1rem;">
 <h1> Div4 [ Peinture 4 ]</h1>
 </div>
 
@@ -2495,6 +2495,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
