--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            border: 0.18rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
             padding: 9px;
@@ -216,11 +215,10 @@
 
 .TYK1:hover{
   border-radius: 2rem;
-            border: 0.13rem solid #010512f3;
             background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 1rem solid rgba(9, 211, 12, 0.967);
-            color: #222222f3;
-            transition: 0.29s ease-in;
+            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            color: #2e2828f3;
+            transition: 0.4s ease;
 }
 
           .navbar0{
@@ -289,7 +287,6 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            border: 0.18rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
             padding: 9px;
@@ -299,11 +296,10 @@
 
           .myDiv:hover{
             border-radius: 2rem;
-            border: 0.13rem solid #010512f3;
             background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 1rem solid rgba(9, 211, 12, 0.967);
-            color: #222222f3;
-            transition: 0.29s ease-in;
+            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            color: #2e2828f3;
+            transition: 0.4s ease;
       
           }
 
@@ -317,7 +313,6 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            border: 0.18rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
             padding: 9px;
@@ -327,11 +322,10 @@
 
           .myDiv1:hover{
             border-radius: 2rem;
-            border: 0.13rem solid #010512f3;
             background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 1rem solid rgba(9, 211, 12, 0.967);
-            color: #222222f3;
-            transition: 0.29s ease-in;
+            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            color: #2e2828f3;
+            transition: 0.4s ease;
           }
 
           .myDiv2{
@@ -344,7 +338,6 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            border: 0.18rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
             padding: 9px;
@@ -354,11 +347,10 @@
 
           .myDiv2:hover{
             border-radius: 2rem;
-            border: 0.13rem solid #010512f3;
             background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 1rem solid rgba(9, 211, 12, 0.967);
-            color: #222222f3;
-            transition: 0.29s ease-in;
+            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            color: #2e2828f3;
+            transition: 0.4s ease;
           }
 
           .myDivT{
@@ -371,7 +363,6 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            border: 0.18rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
             padding: 9px;
@@ -380,11 +371,10 @@
           }
           .myDivT:hover{
             border-radius: 2rem;
-            border: 0.13rem solid #010512f3;
             background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 1rem solid rgba(9, 211, 12, 0.967);
-            color: #222222f3;
-            transition: 0.29s ease-in;
+            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            color: #2e2828f3;
+            transition: 0.4s ease;
           }
 
           .Peinture{
@@ -397,7 +387,6 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            border: 0.18rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
             padding: 9px;
@@ -407,11 +396,10 @@
 
           .Peinture:hover{
             border-radius: 2rem;
-            border: 0.13rem solid #010512f3;
             background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 1rem solid rgba(9, 211, 12, 0.967);
-            color: #222222f3;
-            transition: 0.29s ease-in;
+            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            color: #2e2828f3;
+            transition: 0.4s ease;
           }
 
 
@@ -425,7 +413,6 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            border: 0.18rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
             padding: 9px;
@@ -435,11 +422,10 @@
 
           .myDiv6:hover{
             border-radius: 2rem;
-            border: 0.13rem solid #010512f3;
             background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 1rem solid rgba(9, 211, 12, 0.967);
-            color: #222222f3;
-            transition: 0.29s ease-in;
+            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            color: #2e2828f3;
+            transition: 0.4s ease;
           }
 
 
@@ -2376,7 +2362,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </div>
 
 <div class="PaintingTitle">
-  Peinture
+  Peinture [à compléter]
 </div>
 
 <div class="Painting">
