--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #404040f2;
+                 background: #3e3e3ef2;
                  width: 100%;
                  height: 118px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 1.5rem 1px rgba(73, 73, 73, 0.369);
+                 box-shadow: 0 0 1.65rem 1px rgba(77, 77, 77, 0.58);
                  border-bottom: 5.2rem solid #fff;  
           }
           
@@ -266,7 +266,7 @@
           font-size: 1rem; 
           margin-top: 0.11rem;
           font-family: 'arial black'; 
-          border-top: 0.1rem solid #404040f2;
+          border-top: 0.1rem solid #464646f2;;
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
          }
@@ -876,11 +876,11 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 23px;
-  color: #040437fe;
+  color: #01012e;
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
-  font-size: 18.14px; 
+  font-size: 18.48px; 
   background: #fff;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
@@ -2482,6 +2482,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
