--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
 
 .TYK1:hover{
   border-radius: 2rem;
-            background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(58, 255, 4);
             color: #2e2828f3;
-            transition: 0.4s ease;
+            transition: 0.44s ease;
 }
 
           .navbar0{
@@ -296,11 +296,10 @@
           }
 
           .myDiv:hover{
-            border-radius: 2rem;
-            background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(58, 255, 4);
             color: #2e2828f3;
-            transition: 0.4s ease;
+            transition: 0.44s ease;
       
           }
 
@@ -322,11 +321,10 @@
           }
 
           .myDiv1:hover{
-            border-radius: 2rem;
-            background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(58, 255, 4);
             color: #2e2828f3;
-            transition: 0.4s ease;
+            transition: 0.44s ease;
           }
 
           .myDiv2{
@@ -347,11 +345,10 @@
             }
 
           .myDiv2:hover{
-            border-radius: 2rem;
-            background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(58, 255, 4);
             color: #2e2828f3;
-            transition: 0.4s ease;
+            transition: 0.44s ease;
           }
 
           .myDivT{
@@ -371,11 +368,10 @@
             font-size: 15.85px;
           }
           .myDivT:hover{
-            border-radius: 2rem;
-            background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(58, 255, 4);
             color: #2e2828f3;
-            transition: 0.4s ease;
+            transition: 0.44s ease;
           }
 
           .Peinture{
@@ -396,11 +392,10 @@
           }
 
           .Peinture:hover{
-            border-radius: 2rem;
-            background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(58, 255, 4);
             color: #2e2828f3;
-            transition: 0.4s ease;
+            transition: 0.44s ease;
           }
 
 
@@ -422,11 +417,10 @@
             }
 
           .myDiv6:hover{
-            border-radius: 2rem;
-            background: -webkit-linear-gradient(rgba(255, 255, 255, 0.202) 1%,red) 99%;
-            border-bottom: 0.69rem solid rgba(54, 255, 4, 0.969);
+            background: -webkit-linear-gradient(rgba(255, 107, 107, 0.477) 1%,red) 99%;
+            border-bottom: 0.69rem solid rgb(58, 255, 4);
             color: #2e2828f3;
-            transition: 0.4s ease;
+            transition: 0.44s ease;
           }
 
 
