--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          background: -webkit-linear-gradient(#191919f7,#15151588);
-          color:#ffffffd4; 
+          color:#000; 
           width: auto; 
           height: 74.48px; 
           padding: 13px; 
@@ -268,13 +267,14 @@
           border-top: 0.1rem solid #191919f7;
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
+          background: -webkit-linear-gradient(orangered 0%, yellow 100%);
           box-shadow: 1px 2.5px 0.26rem 0 orangered;
          }
 
          .YIKI:hover{
-          background: -webkit-linear-gradient(orangered 0%, yellow 100%);
+          background: -webkit-linear-gradient(#191919f7,#15151588);
           transition: 0.27s ease-in;
-          color: #000;
+          color: #fff;
          }
 
 
@@ -2477,12 +2477,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
-
-
-
 
