--- a/index.html
+++ b/index.html
@@ -1847,8 +1847,8 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="SUNSET">
   <img src="https://www.zupimages.net/up/23/28/mhd5.jpg" alt="Tableau">
 <figure>
-<figcaption style="color: #3e3e3e; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 15px; font-size: 15px; text-align: left; line-height: 19px;">
-  Tableau Noir
+<figcaption style="color: #545454eb; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; margin-top: -3px; font-size: 15px; text-align: left; line-height: 17px;">
+<b>Ecriture de la lettre M</b>
 </figcaption>
 </figure>
 </div>
@@ -2478,6 +2478,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
