--- a/index.html
+++ b/index.html
@@ -562,7 +562,6 @@ hr{
     color: rgb(51, 51, 51);
     font-size: 17.25px;
     text-align: left;
-    opacity: 0.97;
     margin-bottom: 1rem;
     margin-top: 0.35rem;
     padding: 10px;
@@ -819,9 +818,9 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 74%;
     height: auto;
-    line-height: 28px;
+    line-height: 27px;
     font-size: 17.5px; 
-    color: #040d2ef6;
+    color: #000;
     font-family:'helvetica';
     word-spacing: 0.25px;
     padding: 10px;
@@ -872,7 +871,7 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 22.57px;
-  color: #05055ae7;
+  color: #091272;
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
@@ -2478,6 +2477,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
