--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2rem 1px rgba(167, 167, 167, 0.556);
+                 box-shadow: 0 0 2.5rem 1px rgba(141, 141, 141, 0.429);
                  border-bottom: 5.2rem solid #fff;  
           }
           
@@ -943,7 +943,7 @@ animation: auto 12s infinite ease-in;
     height: auto;
     line-height: 28px;
     font-size: 17.5px; 
-    color: #040d2ef6;
+    color: #000;
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
 }
@@ -1099,7 +1099,7 @@ height: 750px;
   box-shadow: none;
 }
 a:visited{
-  color: rgba(255, 18, 145, 0.94);
+  color: rgba(255, 10, 141, 0.993);
 }
 
 .Ecole{
@@ -1206,7 +1206,7 @@ height: 215px;
   height: auto;
   line-height: 28px;
     font-size: 17.5px; 
-    color: #040d2ef6;
+    color: #000;
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
     text-align: justify;
@@ -1223,7 +1223,7 @@ height: 215px;
     height: auto;
     line-height: 28px;
     font-size: 17.5px; 
-    color: #040d2ef6;
+    color: #000;
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
     border-top: 0.12rem solid #000;
@@ -1240,7 +1240,7 @@ height: 215px;
   height: auto;
   line-height: 28px;
     font-size: 17.5px;  
-    color: #040d2ef6;
+    color: #000;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
     word-spacing: 0.25px;
 }
@@ -1291,7 +1291,7 @@ transition: 0.26s linear;
   height: auto;
   line-height: 28px;
     font-size: 17.5px; 
-    color: #040d2ef6;
+    color: #000;
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
   margin-top: 4.2rem;
@@ -1328,6 +1328,7 @@ transition: 0.26s linear;
   border-top: 0.1rem solid #4f4f4f;
   line-height: 28px;
     font-size: 17.5px; 
+    color: #000;
 }
 
 .C3{
@@ -2477,6 +2478,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
