--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2.5rem 1px rgba(130, 130, 130, 0.372);
+                 box-shadow: 0 0 2rem 1px rgba(93, 93, 93, 0.443);
                  border-bottom: 5.2rem solid #fff;  
           }
           
@@ -2085,7 +2085,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     
 
   <p>
-    <br><em style="color:#01010c99">L'éducation est un droit fondamental, un puissant vecteur de développement et l'un des meilleurs moyens de réduire la pauvreté, d'élever les niveaux de santé, de promouvoir l'égalité entre les sexes et de faire progresser la paix et la stabilité. <a href="https://www.banquemondiale.org/fr/topic/education/overview" target="_blank" style="font-size: 15px;">[Sources: Banque Mondiale]</em></a> 
+    <br><em style="color:#000">L'éducation est un droit fondamental, un puissant vecteur de développement et l'un des meilleurs moyens de réduire la pauvreté, d'élever les niveaux de santé, de promouvoir l'égalité entre les sexes et de faire progresser la paix et la stabilité. <a href="https://www.banquemondiale.org/fr/topic/education/overview" target="_blank" style="font-size: 15px;">[Sources: Banque Mondiale]</em></a> 
     <br>
     <br>
     C'est pour cela que les questions liées à l'éducation des personnes handicapées sont en priorité dans les projets de Tiki N'Yiki.  
@@ -2478,6 +2478,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
