--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
       width: 100%;
       color: cyan;
     }
-
     
     .navbar{
       display: grid;
@@ -192,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2rem 1px rgba(93, 93, 93, 0.443);
+                 box-shadow: 0 0 2.5rem 1px rgba(147, 147, 147, 0.555);
                  border-bottom: 5.2rem solid #fff;  
           }
           
@@ -270,12 +269,13 @@
           background: -webkit-linear-gradient(orangered 0%, yellow 100%);
           box-shadow: 1px 2.5px 0.26rem 0 orangered;
           margin-left: 10px;
+          margin-top: 0.2rem;
          }
 
          .YIKI:hover{
-          background: -webkit-linear-gradient(#191919f7,#15151588);
+          background: -webkit-linear-gradient( green 0%, yellow 100%);
           transition: 0.27s ease-in;
-          color: #fff;
+          color: yellow;
          }
 
 
