--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2.55rem 1px rgba(139, 139, 139, 0.543);
+                 box-shadow: 0 0 2.55rem 1px rgba(147, 146, 146, 0.543);
                  border-bottom: 5.2rem solid #fff;  
           }
           
@@ -230,6 +230,7 @@
             height: 126px; 
             background: #a3a7fd32;
             border-bottom: 0.6rem solid rgba(255, 85, 0, 0.815);
+            opacity: 0.98;
           }
           .BIEN{
             display: grid;
@@ -529,6 +530,7 @@ hr{
     justify-content: center;
     align-items: center;
     padding: 10px;
+    opacity: 0.98;
     
 }
 
@@ -565,7 +567,6 @@ hr{
     margin-bottom: 1rem;
     margin-top: 0.35rem;
     padding: 10px;
-  
 }
 .content1 a:hover{
     color: blue;
@@ -2478,5 +2479,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
