--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gainsboro;
+      color: gold;
       padding: 10px;
       margin-top: -1.2rem;
       font-family: verdana; 
-      font-size: 13px;
+      font-size: 14px;
       
     }
 
@@ -126,11 +126,11 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color:   gainsboro;
+      color:   gold;
       padding: 10px;
       margin-top: -1.2rem;
       font-family: verdana; 
-      font-size: 13px;
+      font-size: 14px;
     }
 
     .Calculator:hover{
@@ -146,11 +146,11 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color:   gainsboro;
+      color:   gold;
       padding: 10px;
       margin-top: -1.2rem;
       font-family: verdana; 
-      font-size: 13px;
+      font-size: 14px;
     }
 
     .dico:hover{
@@ -166,7 +166,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color:   gainsboro;
+      color:   gold;
       padding: 10px;
       margin-top: -1.15rem;
       font-family: Verdana; 
@@ -184,15 +184,15 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #1240acfa;
+                 background: rgba(54, 70, 207, 0.992);
                  width: 100%;
                  height: 120px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 2.55rem 1px rgba(173, 173, 173, 0.614);
-                 border-bottom: 5.2rem solid #fff;  
+                 box-shadow: 0 0 4rem 1px rgba(110, 110, 110, 0.469);
+                 border-bottom: 5.25rem solid #fff;  
           }
           
           .TYK1{
@@ -258,13 +258,13 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color:#0939a9fa;
+          color:rgba(49, 60, 158, 0.992);
           width: auto; 
           height: 74.5px; 
           padding: 8px; 
           font-size: 1rem; 
           font-family: 'arial black'; 
-          border-top: 0.1rem solid #08359ef7;
+          border-top: 0.12rem solid rgba(66, 80, 206, 0.43);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient(orangered 0%, yellow 100%);
@@ -874,13 +874,13 @@ animation: auto 12s infinite ease-in;
   line-height: 22.6px;
   color: #081067;
   word-spacing: 1.5px;
-  opacity: 0.98;
+  opacity: 0.99;
   text-align: left;
   font-size: 18.49px; 
   background: #fff;
   border-right: 0.25rem solid transparent;
   border-top: 0.25rem solid transparent;
-  padding: 10px;
+  padding: 15px;
   
   
 }
@@ -2481,10 +2481,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
 
 
