--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color:red;
+            color: rgba(74, 87, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -339,7 +339,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color:red;
+            color:rgba(74, 87, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -386,7 +386,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color:red;
+            color:rgba(74, 87, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -2481,6 +2481,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
