--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(25, 43, 205, 0.992);
+                 background: rgba(23, 41, 205, 0.992);
                  width: 100%;
                  height: 120px;
                  object-fit: cover;
@@ -205,7 +205,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color:red;
+            color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -290,7 +290,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color: rgba(34, 52, 216, 0.992);
+            color: rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -315,7 +315,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color:red;
+            color: rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -339,7 +339,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color:rgba(34, 52, 216, 0.992);
+            color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -363,7 +363,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color:red;
+            color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -386,7 +386,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color:rgba(34, 52, 216, 0.992);
+            color:rgba(25, 43, 205, 0.992);
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -411,7 +411,7 @@
             width: 100%;
             border-radius: 2rem;
             background: transparent;
-            color:red;
+            color:rgba(25, 43, 205, 0.992);;
             margin-top: 1.25rem;
             padding: 9px;
             font-family:'arial black';
@@ -2481,6 +2481,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
