--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(23, 41, 205, 0.992);
+                 background: rgba(40, 55, 189, 0.992);
                  width: 100%;
                  height: 120px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 3rem 1px rgba(113, 113, 113, 0.469);
+                 box-shadow: 0 0 3rem 1px rgba(118, 118, 118, 0.449);
                  border-bottom: 5.25rem solid #fff;  
           }
           
@@ -258,13 +258,13 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color:rgba(34, 52, 216, 0.992);
+          color:rgba(40, 55, 189, 0.992);
           width: auto; 
           height: 74.5px; 
           padding: 8px; 
           font-size: 1rem; 
           font-family: 'arial black'; 
-          border-top: 0.12rem solid rgba(34, 52, 216, 0.441);
+          border-top: 0.12rem solid rgba(40, 55, 189, 0.5);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient(orangered 0%, yellow 100%);
@@ -557,7 +557,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fff;
+    background: transparent;
     width: 94.5%;
     height: auto;
     font-family: 'helvetica';
@@ -872,7 +872,7 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 22.6px;
-  color: #081067;
+  color: #060e5f;
   word-spacing: 1.5px;
   opacity: 0.99;
   text-align: left;
