--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(40, 55, 189, 0.992);
+                 background: rgba(37, 51, 180, 0.992);
                  width: 100%;
                  height: 120px;
                  object-fit: cover;
@@ -258,13 +258,13 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          color:rgba(40, 55, 189, 0.992);
+          color:rgba(37, 51, 180, 0.992);
           width: auto; 
           height: 74.5px; 
           padding: 8px; 
           font-size: 1rem; 
           font-family: 'arial black'; 
-          border-top: 0.12rem solid rgba(40, 55, 189, 0.5);
+          border-top: 0.12rem solid rgba(37, 51, 180, 0.277);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
           background: -webkit-linear-gradient(orangered 0%, yellow 100%);
@@ -274,7 +274,7 @@
          }
 
          .YIKI:hover{
-          background: -webkit-linear-gradient( green 0%, yellow 100%);
+          background: -webkit-linear-gradient( red 0%,  #fff 100%);
           transition: 0.27s ease-in;
           color: #000;
          }
@@ -2481,6 +2481,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
