--- a/index.html
+++ b/index.html
@@ -872,9 +872,8 @@ animation: auto 12s infinite ease-in;
   height: auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   line-height: 22.6px;
-  color: #060e5f;
+  color: #081065;
   word-spacing: 1.5px;
-  opacity: 0.99;
   text-align: left;
   font-size: 18.49px; 
   background: #fff;
@@ -2486,5 +2485,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
